--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,13 @@ require:
   - rubocop-rspec
   - rubocop-performance
 
+
 AllCops:
   TargetRubyVersion: 3.1.2
   NewCops: enable
+  Exclude:
+    - "**/*_spec.rb"
+
+# It's common to have one-line methods for component helpers
+Layout/EmptyLineBetweenDefs:
+  AllowAdjacentOneLineDefs: true
