--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,11 +6,11 @@ require:
   - rubocop-rspec
   - rubocop-performance
 
-
 AllCops:
   TargetRubyVersion: 3.1.2
   NewCops: enable
   Exclude:
+    - vendor/bundle/**/*
     - "**/*_spec.rb"
 
 # It's common to have one-line methods for component helpers
