--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,3 +9,10 @@ require:
 AllCops:
   TargetRubyVersion: 3.1.2
   NewCops: enable
+  Exclude:
+    - vendor/bundle/**/*
+    - "**/*_spec.rb"
+
+# It's common to have one-line methods for component helpers
+Layout/EmptyLineBetweenDefs:
+  AllowAdjacentOneLineDefs: true
